Further improvements to formula structure. Isolate linux stuff to linuxenv state

--- a/intellij/map.jinja
+++ b/intellij/map.jinja
@@ -13,15 +13,12 @@
                     'osflavour': 'mac',
         },
         'Windows':{ 'prefix' : 'C:\\Program files',
+                    'tmpdir' : 'C:\\temp\\jetbrainstmp\\',
                     'homes'  : 'C:\\Users',
                     'command': '\\idea.exe',
                     'osflavour': 'windows',
         },
-  }
-  , grain="os"
-  , merge=defs
-  , base="intellij"
- )
+  }, grain="os", merge=defs, base="intellij")
 %}
 
 # Merge osmap onto default settings before merging pillars.
@@ -38,9 +35,8 @@
   {%- set _home = '{0}/intellij-{1}-{2}'.format( ide.prefix, ide.jetbrains.edition,
                                                    jdata[ pcode ][0]['version'],) %}
 {% endif %}
-{% do ide.alt.update({ 'realhome': _home, 'realcmd': _home ~ ide.command },) %}
+{% do ide.jetbrains.update({ 'realhome': _home, 'realcmd' : _home ~ ide.command },) %}
 
-# Set Jetbrains IDE download details
 {%- set src_hashurl = jdata[ pcode ][0]['downloads'][ ide.osflavour ]['checksumLink'] %}
 {%- set src_hashsum  = salt['cmd.run']('curl -s {0}'.format( src_hashurl )).split(' ')[0] %}
 {% do ide.dl.update({
@@ -51,6 +47,5 @@
        'unpack_opts' : ' -z -C ' ~  _home ~ ' --strip-components=1' },
     )
 %}
-
 {% set intellij = ide %}
 
