--- a/intellij/files/default/shortcut.desktop.jinja
+++ b/intellij/files/default/shortcut.desktop.jinja
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name={{ appname }}{{ ' %sE'|format(edition) if edition else '' }}
-Comment={{ appname }}{{ ' %sE'|format(edition) if edition else '' }}
+Name={{ appname }}{{ ' %sE'|format(edition) if edition is defined and edition else '' }}
+Comment={{ appname }}{{ ' %sE'|format(edition) if edition is defined and edition else '' }}
 Icon={{ path }}/{{ command.split('.')[0] }}.png
 Exec={{ path }}/{{ command }}
 Terminal=false
