--- a/intellij/map.jinja
+++ b/intellij/map.jinja
@@ -19,12 +19,12 @@
 
 {%- set edition = '' if 'edition' not in i else i.edition %}
 {%- set pcode = i.product ~ edition %}
-{%- set jdata = salt['cmd.run']('curl -s -L {0}{1}'.format(i.pkg.archive.uri, pcode))|load_yaml %}
+{%- set jdata = salt['cmd.run']('curl -s -L "{0}{1}"'.format(i.pkg.archive.uri, pcode))|load_yaml %}
 {%- do i.update({ 'version': jdata[ pcode ][0]['version'] }) %}
 
 {%- set dirname = 'i-%s-%s'|format( edition, i.version) %}
 {%- set url = jdata[ pcode ][0]['downloads'][ i.flavour ]['link'] %}
-{%- set hash  = salt['cmd.run']('curl -L -s {0}'.format( jdata[ pcode ][0]['downloads'][ i.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
+{%- set hash  = salt['cmd.run']('curl -L -s "{0}"'.format( jdata[ pcode ][0]['downloads'][ i.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
 
 {%- if i.pkg.use_upstream_archive %}
        {%- do i.pkg.archive.update({'name': i.dir.archive ~ '/' ~ dirname,
