--- a/intellij/files/default/shortcut.desktop.jinja
+++ b/intellij/files/default/shortcut.desktop.jinja
@@ -1,7 +1,8 @@
+{%- set path = '%s%s'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
 [Desktop Entry]
 Encoding=UTF-8
-Name={{ appname }}{{ ' %sE'|format(edition) if edition is defined and edition else '' }}
-Comment={{ appname }}{{ ' %sE'|format(edition) if edition is defined and edition else '' }}
+Name={{ path }}
+Comment={{ path }}
 Icon={{ path }}/{{ command.split('.')[0] }}.png
 Exec={{ path }}/{{ command }}
 Terminal=false
