--- a/intellij/map.jinja
+++ b/intellij/map.jinja
@@ -22,16 +22,16 @@
 {%- set jdata = salt['cmd.run']('curl -s -L "{0}{1}"'.format(i.pkg.archive.uri, pcode))|load_yaml %}
 {%- do i.update({ 'version': jdata[ pcode ][0]['version'] }) %}
 
-{%- set dirname = 'i-%s-%s'|format( edition, i.version) %}
+{%- set dirname = 'intellij-%s-%s'|format( edition, i.version) %}
 {%- set url = jdata[ pcode ][0]['downloads'][ i.flavour ]['link'] %}
 {%- set hash  = salt['cmd.run']('curl -L -s "{0}"'.format( jdata[ pcode ][0]['downloads'][ i.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
 
 {%- if i.pkg.use_upstream_archive %}
-    {%- do i.config.update({'path': i.dir.archive ~ '/' ~ dirname })
-    {%- do i.pkg.archive.update({'name': i.dir.archive ~ '/' ~ dirname, 'source': url, 'source_hash': hash }) %}
+    {%- do i.dir.update({'path': i.dir.archive ~ '/' ~ dirname }) %}
+    {%- do i.pkg.archive.update({'name': i.dir.archive ~'/'~ dirname, 'source': url, 'source_hash': hash }) %}
 {%- endif %}
 {%- if i.pkg.use_upstream_macapp %}
-    {%- do i.config.update({'path': '/Applications' })
+    {%- do i.dir.update({'path': '/Applications' }) %}
     {%- do i.pkg.macapp.update({'source': url, 'source_hash': hash }) %}
 {%- endif %}
 
