--- a/intellij/files/default/shortcut.desktop.jinja
+++ b/intellij/files/default/shortcut.desktop.jinja
@@ -1,9 +1,9 @@
-{%- set path = '%s%s'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
+{%- set appdir = '%s%s'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
 [Desktop Entry]
 Encoding=UTF-8
-Name={{ path }}
-Comment={{ path }}
-Icon={{ path }}/{{ command.split('.')[0] }}.png
-Exec={{ path }}/{{ command }}
+Name={{ appdir }}
+Comment={{ appdir }}
+Icon={{ appdir }}/{{ command.split('.')[0] }}.png
+Exec={{ appdir }}/{{ command }}
 Terminal=false
 Type=Application
