--- a/intellij/map.jinja
+++ b/intellij/map.jinja
@@ -24,11 +24,12 @@
 
 {%- set dirname = 'intellij-%s-%s'|format( edition, i.version) %}
 {%- set url = jdata[ pcode ][0]['downloads'][ i.flavour ]['link'] %}
-{%- set hash  = salt['cmd.run']('curl -L -s "{0}"'.format( jdata[ pcode ][0]['downloads'][ i.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
+{%- set hash = salt['cmd.run']('curl -L -s "{0}"'.format( jdata[ pcode ][0]['downloads'][ i.flavour ]['checksumLink'])).split(' ')[0] %}  # noqa 204
 
 {%- if i.pkg.use_upstream_archive %}
-    {%- do i.dir.update({'path': i.dir.archive ~ '/' ~ dirname }) %}
-    {%- do i.pkg.archive.update({'name': i.dir.archive ~ '/' ~ dirname, 'source': url, 'source_hash': hash }) %}
+    {%- set d = '\\' if grains.os == 'Windows' else '/' %}
+    {%- do i.dir.update({'path': i.dir.archive ~ d ~ dirname }) %}
+    {%- do i.pkg.archive.update({'name': i.dir.archive ~ d ~ dirname, 'source': url, 'source_hash': hash }) %}
 {%- endif %}
 {%- if i.pkg.use_upstream_macapp %}
     {%- do i.dir.update({'path': '/Applications' }) %}
