--- a/intellij/files/default/environ.sh.jinja
+++ b/intellij/files/default/environ.sh.jinja
@@ -2,7 +2,7 @@
 # File managed by Salt at <{{ source }}>.
 # Your changes may be overwritten.
 ########################################################################
-{%- set path = '%s%s'.format(appname, edition) %}
+{%- set path = '{}{}'.format(appname, edition) %}
 
 export PATH=${PATH}:{{ path }}
 {{ '' if not environ else environ|yaml(False) }}
