--- a/intellij/files/default/shortcut.desktop.jinja
+++ b/intellij/files/default/shortcut.desktop.jinja
@@ -1,4 +1,4 @@
-{%- set appdir = '%s%s'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
+{%- set appdir = '{}{}'.format(appname, ' %sE'|format(edition) if edition is defined and edition else '') %}
 [Desktop Entry]
 Encoding=UTF-8
 Name={{ appdir }}
